[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ten_utils"
version = "0.0.8"
description = "A toolkit for reuse"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Караваев Александр", email = "234iskateli234@gmail.com" }]
dependencies = [
    "rich==13.9.4"
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
packages = [
    "ten_utils",
    "ten_utils.log",
    "ten_utils.common",
]
