[build-system]
requires = ["setuptools<=80.9.0", "wheel==0.45.1", "setuptools_scm<=9.2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ten_utils"
dynamic = ["version"]
description = "A python library that implements many small tools that are often used in python development."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Караваев Александр", email = "234iskateli234@gmail.com" }]
dependencies = [
    "rich<=14.1.0",
    "python-dotenv<=1.1.1",
    "pydantic<=2.11.10",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
dev = ["pytest<=8.4.2"]

[project.urls]
Homepage = "https://github.com/Ten-o69/ten-utils"
BugTracker = "https://github.com/Ten-o69/ten-utils/issues"

[tool.setuptools]
packages = [
    "ten_utils",
    "ten_utils._common",
    "ten_utils._validators",
    "ten_utils.env_loader",
    "ten_utils.errors",
    "ten_utils.log",
]

[tool.pytest.ini_options]
addopts = "-ra --disable-warnings"
testpaths = ["tests"]


[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
